--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -63,6 +63,17 @@ jobs:
           echo "REDIS_DB=0" >> .env
           cat .env
 
+      - name: Wait for MySQL
+        run: |
+          for i in {1..30}; do
+            if docker exec labo03_db mysqladmin ping -h "127.0.0.1" --silent; then
+              echo "MySQL is ready!"
+              break
+            fi
+            echo "Waiting for MySQL..."
+            sleep 2
+          done
+
       - name: Run init.sql
         run: mysql -h 127.0.0.1 -P 3307 -uroot -proot labo03_db < ./db-init/init.sql
 
@@ -87,3 +98,7 @@ jobs:
           docker compose down -v || true
           docker compose build
           docker compose up -d
+
+      - name: Docker image prune
+        if: always()
+        run: docker system prune -a --volumes -f
