--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -66,7 +66,7 @@ jobs:
       - name: Wait for MySQL
         run: |
           for i in {1..30}; do
-            if docker exec labo03_db mysqladmin ping -h "127.0.0.1" --silent; then
+            if docker exec mysql mysqladmin ping -h "127.0.0.1" --silent; then
               echo "MySQL is ready!"
               break
             fi
